almost made projectiles work

--- a/JoJo/JoJo.csproj
+++ b/JoJo/JoJo.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Model\Gem.cs" />
     <Compile Include="Model\RectangleExtensions.cs" />
     <Compile Include="Model\Player2.cs" />
+    <Compile Include="Model\Projectile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
